--- a/packages/@cdklabs/cdk-amazonmq-activemq-config-v5_18_4/package.json
+++ b/packages/@cdklabs/cdk-amazonmq-activemq-config-v5_18_4/package.json
@@ -29,7 +29,7 @@
   },
   "author": {
     "name": "AWS",
-    "email": "aws-cdk-dev@amazon.com",
+    "email": "cdk-amazonmq-maintainers@amazon.com",
     "organization": false
   },
   "devDependencies": {
