--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,6 +104,7 @@ jobs:
     needs:
       - release
       - cdklabs-cdk-amazonmq-activemq-config-v5_15_16_release_npm
+      - cdklabs-cdk-amazonmq-activemq-config-v5_15_16_release_maven
       - cdklabs-cdk-amazonmq-activemq-config-v5_15_16_release_pypi
       - cdklabs-cdk-amazonmq-activemq-config-v5_15_16_release_nuget
     runs-on: ubuntu-latest
@@ -155,6 +156,37 @@ jobs:
           NPM_CONFIG_PROVENANCE: "true"
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx -p publib@latest publib-npm
+  cdklabs-cdk-amazonmq-activemq-config-v5_15_16_release_maven:
+    name: "@cdklabs/cdk-amazonmq-activemq-config-v5_15_16: Publish to Maven Central"
+    needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    if: ${{ needs.release.outputs.latest_commit == github.sha && needs.release.outputs.publish-cdklabs-cdk-amazonmq-activemq-config-v5_15_16 == 'true' }}
+    steps:
+      - uses: actions/setup-java@v4
+        with:
+          distribution: corretto
+          java-version: "11"
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdklabs-cdk-amazonmq-activemq-config-v5_15_16_build-artifact
+          path: dist
+      - name: Restore build artifact permissions
+        run: cd dist && setfacl --restore=permissions-backup.acl
+        continue-on-error: true
+      - name: Release
+        env:
+          MAVEN_GPG_PRIVATE_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          MAVEN_GPG_PRIVATE_KEY_PASSPHRASE: ${{ secrets.MAVEN_GPG_PRIVATE_KEY_PASSPHRASE }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_STAGING_PROFILE_ID: ${{ secrets.MAVEN_STAGING_PROFILE_ID }}
+        run: npx -p publib@latest publib-maven
   cdklabs-cdk-amazonmq-activemq-config-v5_15_16_release_pypi:
     name: "@cdklabs/cdk-amazonmq-activemq-config-v5_15_16: Publish to PyPI"
     needs: release
@@ -213,6 +245,7 @@ jobs:
     needs:
       - release
       - cdklabs-cdk-amazonmq-activemq-config-v5_16_7_release_npm
+      - cdklabs-cdk-amazonmq-activemq-config-v5_16_7_release_maven
       - cdklabs-cdk-amazonmq-activemq-config-v5_16_7_release_pypi
       - cdklabs-cdk-amazonmq-activemq-config-v5_16_7_release_nuget
     runs-on: ubuntu-latest
@@ -264,6 +297,37 @@ jobs:
           NPM_CONFIG_PROVENANCE: "true"
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx -p publib@latest publib-npm
+  cdklabs-cdk-amazonmq-activemq-config-v5_16_7_release_maven:
+    name: "@cdklabs/cdk-amazonmq-activemq-config-v5_16_7: Publish to Maven Central"
+    needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    if: ${{ needs.release.outputs.latest_commit == github.sha && needs.release.outputs.publish-cdklabs-cdk-amazonmq-activemq-config-v5_16_7 == 'true' }}
+    steps:
+      - uses: actions/setup-java@v4
+        with:
+          distribution: corretto
+          java-version: "11"
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdklabs-cdk-amazonmq-activemq-config-v5_16_7_build-artifact
+          path: dist
+      - name: Restore build artifact permissions
+        run: cd dist && setfacl --restore=permissions-backup.acl
+        continue-on-error: true
+      - name: Release
+        env:
+          MAVEN_GPG_PRIVATE_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          MAVEN_GPG_PRIVATE_KEY_PASSPHRASE: ${{ secrets.MAVEN_GPG_PRIVATE_KEY_PASSPHRASE }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_STAGING_PROFILE_ID: ${{ secrets.MAVEN_STAGING_PROFILE_ID }}
+        run: npx -p publib@latest publib-maven
   cdklabs-cdk-amazonmq-activemq-config-v5_16_7_release_pypi:
     name: "@cdklabs/cdk-amazonmq-activemq-config-v5_16_7: Publish to PyPI"
     needs: release
@@ -322,6 +386,7 @@ jobs:
     needs:
       - release
       - cdklabs-cdk-amazonmq-activemq-config-v5_17_6_release_npm
+      - cdklabs-cdk-amazonmq-activemq-config-v5_17_6_release_maven
       - cdklabs-cdk-amazonmq-activemq-config-v5_17_6_release_pypi
       - cdklabs-cdk-amazonmq-activemq-config-v5_17_6_release_nuget
     runs-on: ubuntu-latest
@@ -373,6 +438,37 @@ jobs:
           NPM_CONFIG_PROVENANCE: "true"
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx -p publib@latest publib-npm
+  cdklabs-cdk-amazonmq-activemq-config-v5_17_6_release_maven:
+    name: "@cdklabs/cdk-amazonmq-activemq-config-v5_17_6: Publish to Maven Central"
+    needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    if: ${{ needs.release.outputs.latest_commit == github.sha && needs.release.outputs.publish-cdklabs-cdk-amazonmq-activemq-config-v5_17_6 == 'true' }}
+    steps:
+      - uses: actions/setup-java@v4
+        with:
+          distribution: corretto
+          java-version: "11"
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdklabs-cdk-amazonmq-activemq-config-v5_17_6_build-artifact
+          path: dist
+      - name: Restore build artifact permissions
+        run: cd dist && setfacl --restore=permissions-backup.acl
+        continue-on-error: true
+      - name: Release
+        env:
+          MAVEN_GPG_PRIVATE_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          MAVEN_GPG_PRIVATE_KEY_PASSPHRASE: ${{ secrets.MAVEN_GPG_PRIVATE_KEY_PASSPHRASE }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_STAGING_PROFILE_ID: ${{ secrets.MAVEN_STAGING_PROFILE_ID }}
+        run: npx -p publib@latest publib-maven
   cdklabs-cdk-amazonmq-activemq-config-v5_17_6_release_pypi:
     name: "@cdklabs/cdk-amazonmq-activemq-config-v5_17_6: Publish to PyPI"
     needs: release
@@ -431,6 +527,7 @@ jobs:
     needs:
       - release
       - cdklabs-cdk-amazonmq-activemq-config-v5_18_4_release_npm
+      - cdklabs-cdk-amazonmq-activemq-config-v5_18_4_release_maven
       - cdklabs-cdk-amazonmq-activemq-config-v5_18_4_release_pypi
       - cdklabs-cdk-amazonmq-activemq-config-v5_18_4_release_nuget
     runs-on: ubuntu-latest
@@ -482,6 +579,37 @@ jobs:
           NPM_CONFIG_PROVENANCE: "true"
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx -p publib@latest publib-npm
+  cdklabs-cdk-amazonmq-activemq-config-v5_18_4_release_maven:
+    name: "@cdklabs/cdk-amazonmq-activemq-config-v5_18_4: Publish to Maven Central"
+    needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    if: ${{ needs.release.outputs.latest_commit == github.sha && needs.release.outputs.publish-cdklabs-cdk-amazonmq-activemq-config-v5_18_4 == 'true' }}
+    steps:
+      - uses: actions/setup-java@v4
+        with:
+          distribution: corretto
+          java-version: "11"
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: cdklabs-cdk-amazonmq-activemq-config-v5_18_4_build-artifact
+          path: dist
+      - name: Restore build artifact permissions
+        run: cd dist && setfacl --restore=permissions-backup.acl
+        continue-on-error: true
+      - name: Release
+        env:
+          MAVEN_GPG_PRIVATE_KEY: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          MAVEN_GPG_PRIVATE_KEY_PASSPHRASE: ${{ secrets.MAVEN_GPG_PRIVATE_KEY_PASSPHRASE }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_STAGING_PROFILE_ID: ${{ secrets.MAVEN_STAGING_PROFILE_ID }}
+        run: npx -p publib@latest publib-maven
   cdklabs-cdk-amazonmq-activemq-config-v5_18_4_release_pypi:
     name: "@cdklabs/cdk-amazonmq-activemq-config-v5_18_4: Publish to PyPI"
     needs: release
