--- a/packages/@cdklabs/cdk-amazonmq-activemq-config-v5_15_16/.projen/tasks.json
+++ b/packages/@cdklabs/cdk-amazonmq-activemq-config-v5_15_16/.projen/tasks.json
@@ -139,6 +139,9 @@
           "spawn": "package:js"
         },
         {
+          "spawn": "package:java"
+        },
+        {
           "spawn": "package:python"
         },
         {
@@ -152,6 +155,15 @@
       "steps": [
         {
           "exec": "jsii-pacmak -v --target dotnet"
+        }
+      ]
+    },
+    "package:java": {
+      "name": "package:java",
+      "description": "Create java language bindings",
+      "steps": [
+        {
+          "exec": "jsii-pacmak -v --target java"
         }
       ]
     },
