feat: enabling first release

--- a/packages/@cdklabs/xsd2jsii/package.json
+++ b/packages/@cdklabs/xsd2jsii/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xsd2jsii",
+  "name": "@cdklabs/xsd2jsii",
   "bin": {
     "xsd2jsii": "bin/xsd2jsii"
   },
@@ -52,9 +52,6 @@
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
-  "publishConfig": {
-    "access": "public"
-  },
   "version": "0.0.0",
   "jest": {
     "coverageProvider": "v8",
