--- a/packages/@cdklabs/cdk-amazonmq-activemq-config-v5-16-7/package.json
+++ b/packages/@cdklabs/cdk-amazonmq-activemq-config-v5-16-7/package.json
@@ -34,6 +34,7 @@
     "organization": false
   },
   "devDependencies": {
+    "@cdklabs/xsd2jsii": "^0.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.1",
     "@typescript-eslint/eslint-plugin": "^8",
@@ -42,7 +43,7 @@
     "constructs": "^10.0.0",
     "eslint": "^9",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-import-resolver-typescript": "^3.8.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
@@ -52,11 +53,10 @@
     "jsii-pacmak": "^1.106.0",
     "jsii-rosetta": "~5.7.0",
     "prettier": "^3.5.1",
-    "projen": "^0.91.10",
+    "projen": "^0.91.12",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3",
-    "xsd-schema-validator": "^0.11.0",
-    "xsd2jsii": "^0.0.0"
+    "xsd-schema-validator": "^0.11.0"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
