--- a/packages/@cdklabs/cdk-amazonmq-activemq-config-v5-17-6/.projen/tasks.json
+++ b/packages/@cdklabs/cdk-amazonmq-activemq-config-v5-17-6/.projen/tasks.json
@@ -51,7 +51,7 @@
       },
       "steps": [
         {
-          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/jest,@types/node,eslint-config-prettier,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,jest,jsii-diff,jsii-pacmak,prettier,projen,ts-jest,typescript,xsd-schema-validator,xsd2jsii"
+          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/jest,@types/node,eslint-config-prettier,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,jest,jsii-diff,jsii-pacmak,prettier,projen,ts-jest,typescript,xsd-schema-validator"
         }
       ]
     },
@@ -99,7 +99,7 @@
       "name": "gather-versions",
       "steps": [
         {
-          "exec": "node -e \"require(path.join(path.dirname(require.resolve('cdklabs-projen-project-types')), 'yarn', 'gather-versions.exec.js'))\" @cdklabs/cdk-amazonmq-activemq-config-v5-17-6 MAJOR --deps ",
+          "exec": "node -e \"require(path.join(path.dirname(require.resolve('cdklabs-projen-project-types')), 'yarn', 'gather-versions.exec.js'))\" @cdklabs/cdk-amazonmq-activemq-config-v5-17-6 MAJOR --deps @cdklabs/xsd2jsii",
           "receiveArgs": true
         }
       ]
@@ -194,7 +194,7 @@
       "description": "Prepare the project for compilation",
       "steps": [
         {
-          "exec": "cp ../xsd2jsii/src/xml-node.ts ./src/."
+          "exec": "cp ../../@cdklabs/xsd2jsii/src/xml-node.ts ./src/."
         },
         {
           "exec": "echo \"/*\\nCopyright Amazon.com, Inc. or its affiliates. All Rights Reserved.\\nSPDX-License-Identifier: Apache-2.0\\n*/\" > src/generated.ts"
